# frclib-core

./: Cargo.toml  LICENCE.md  README.md  Readme.md
.github/workflows/: ci.yml  rust.yml
frclib-structure-macros/: Cargo.toml
frclib-structure-macros/src/: lib.rs
frclib-unit-func-macros/: Cargo.toml
frclib-unit-func-macros/src/: lib.rs
frclib-units-macros/: Cargo.toml  README.md
frclib-units-macros/src/: conversion.rs  dimensions.rs  family.rs  lib.rs  unit.rs
src/: lib.rs
src/hal/: mod.rs
src/hal/comm/: can.rs  mod.rs
src/hal/gpio/: analog.rs  digital.rs  mod.rs  pwm.rs
src/hal/rt/: mod.rs  notifier.rs  station_interface.rs  time.rs  watchdog.rs
src/logging/: mod.rs
src/notifier/: RioImpl.md
src/structure/: mod.rs  prims.rs  test.rs
src/time/: default.rs  instant.rs  mod.rs
src/units/: angle.rs  angular_acceleration.rs  angular_velocity.rs  data.rs  data_rate.rs  distance.rs  energy.rs  length.rs  linear_acceleration.rs  linear_velocity.rs  mass.rs  mod.rs  moment_of_inertia.rs  temperature.rs  test.rs  time.rs  torque.rs
src/units/macros/: components.rs  helper.rs  mod.rs  number.rs  unused.rs
src/value/: error.rs  mod.rs  test.rs  trait_impls.rs  traits.rs
