[package]
name = "frclib-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A collection of utilities to be used across the FRC in rust ecosystem"
repository = "https://github.com/oh-yes-0-fps/frc-uti-rs"
rust-version = "1.74.0"
keywords = [
    "First Robotics",
    "First Robotics Competition",
    "FRC",
    "FRC rust"
]
categories = [
    "robotics"
]
authors = [
    "oh-yes-0-fps"
]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true}
rmpv = { version = "1.0", optional = true}
serde_json = { version = "1.0", optional = true}
bytes = { version = "1.5.0", features = ["serde"], optional = true}
thiserror = { version = "1.0.50", optional = true}
inventory = { version = "0.3.13", optional = true}
logos = { version = "0.13.0", optional = true}
nalgebra = { version = "0.32", optional = true}
num = { version = "0.4", optional = true}
simba = { version = "0.8", optional = true}
ctor = { version = "0.2.5", optional = true}
linkme = { version = "0.3.17", optional = true}
tracing = {version = "0.1.40", features = ["valuable"], optional = true}
tracing-unwrap = {version = "0.10.0", default-features = false, features = ["log-location"], optional = true}
frclib-structure-macros = { path = "./frclib-structure-macros", optional = true}
frclib-units-macros = { path = "./frclib-units-macros", optional = true}
static_assertions = "1.1.0"
parking_lot = "0.12.1"
bitvec = "1.0.1"

[dev-dependencies]
approx = "0.5.1"

[features]
value-union = ["structure", "serde", "rmpv", "serde_json", "thiserror"]
structure = ["bytes", "inventory", "logos", "frclib-structure-macros"]
units = ["num", "frclib-units-macros"]
units-extra = ["units", "nalgebra", "simba", "serde"]
time = ["ctor", "units"]
hal = ["time", "thiserror"]
logging = ["tracing", "tracing-unwrap"]
performer = ["linkme"]

basic = ["value-union", "time"]
full = ["basic", "units-extra", "hal", "logging", "performer"]







[workspace]
members = [
    "frclib-units-macros",
    "frclib-structure-macros"
]
resolver = "2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
debug = false
