[package]
name = "frclib-core"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "A collection of utilities to be used across the FRC in rust ecosystem"
repository = "https://github.com/oh-yes-0-fps/frclib-core"
rust-version = "1.75.0"
keywords = [
]
categories = [
]
authors = [
    "Bowan Foryt"
]
readme = "README.md"

[dependencies]
serde = { version = "^1.0", features = ["derive"], optional = true}
rmpv = { version = "1.3", optional = true}
serde_json = { version = "1.0.125", optional = true}
thiserror = { version = "1.0.63" }
inventory = { version = "0.3.15", optional = true}
# logos = { version = "0.13.0", optional = true}
nalgebra = { version = "0.33", optional = true}
num = { version = "0.4.3", optional = true}
simba = { version = "0.9", optional = true}
ctor = { version = "0.2.8", optional = true}
# frclib-structure-macros = { path = "./frclib-structure-macros", optional = true}
frclib-structure-macros = { version = "0.1.2", optional = true}
paste = { version = "1.0.15", optional = true }

[dev-dependencies]
approx = "0.5.1"

[features]
structure = ["inventory", "frclib-structure-macros"]
value-union = ["structure", "serde", "rmpv", "serde_json"]
units = ["num", "nalgebra", "simba", "serde", "paste"]
time = ["ctor"]
hal = ["time", "units"]

# approx 40 packages
basic = ["value-union", "time"]
# approx 71 packages and much longer compile times
full = ["basic", "units", "hal"]


[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
features = ["full"]


[workspace]
members = [
    "frclib-structure-macros"
]
resolver = "2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
debug = false
