[package]
name = "frclib-structure-macros"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A derive macro for implementing the FrcStruct trait on structs"
repository = "https://github.com/oh-yes-0-fps/frclib-core"
rust-version = "1.75.0"
authors = [
    "Bowan Foryt"
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"